fix overflow issue

--- a/style.css
+++ b/style.css
@@ -142,6 +142,11 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    padding-bottom: 70px;
+
+    @media (max-width: 500px) {
+        padding-bottom: 0px;
+    }
 }
 
 li a {
